--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -44,5 +42,8 @@
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^20.0.4",
+    "live-server": "^1.2.1"
+  }
 }
