--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.13.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
     "react-dom": "^16.8.6",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^5.0.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
