--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iExpenses",
+  "name": "iexpenses",
   "version": "1.0.0",
-  "description": "",
+  "description": "### **The react app to manage your expenses.** **The _awesome features_ include:** - [x] Management of expenses from the past, present and future :smirk: - [x] Privacy :cool: - access resctricted to individual signed in user. No third party involved. - [x] Absolute mobile responsiveness :wink:",
   "main": "index.js",
   "engines": {
     "node": "8.12.0"
@@ -25,12 +25,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
-    "dotenv": "^4.0.0",
-    "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^4.13.1",
@@ -46,18 +42,30 @@
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^5.0.0",
-    "react-test-renderer": "^16.8.6",
     "redux": "^3.7.2",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.0.5",
+    "dotenv": "^4.0.0",
+    "enzyme": "^3.0.0",
+    "enzyme-to-json": "^3.0.1",
     "jest": "^20.0.4",
+    "react-test-renderer": "^16.8.6",
+    "webpack-dev-server": "^2.5.1",
     "live-server": "^1.2.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nejo12/iexpense.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nejo12/iexpense/issues"
+  },
+  "homepage": "https://github.com/Nejo12/iexpense#readme"
 }
