--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^6.0.6",
+    "tar": ">=4.4.2",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "webpack": "^3.1.0"
